--- a/README.rdoc
+++ b/README.rdoc
@@ -1,5 +1,5 @@
 =My Gists
-====Aplikacja na zaliczenie przedmiotu Architektura Serwisów Internetowych
+=====Aplikacja na zaliczenie przedmiotu Architektura Serwisów Internetowych
 
 ====Link do aplikacji na Heroku
 http://mygistsmlipowski.herokuapp.com/
@@ -10,7 +10,6 @@ http://mygistsmlipowski.herokuapp.com/
 * gem quiet_assets
 * gem bootstrap-sass
 * gem will_paginate
-* gem will_paginate-bootstrap
 
 ====Wykonane zadania:
 * Poprawione widoki
@@ -20,6 +19,6 @@ http://mygistsmlipowski.herokuapp.com/
 * Responsywność strony
 * Przycinanie kodu do określonej długości na stronie głównej
 * Dodane kilka przykładowych rekordów do pliku seeds.rb
-* Zaimplementowane wyszukiwanie
+* Zaimplementowane wyszukiwanie po opisie
 
 
